# Story-Craft-CLI

./: .env.example  .gitignore  README.md  pyproject.toml
memory/: database.py
