[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "story-craft-cli"
version = "0.1.0"
description = "A command-line interface for crafting stories"
authors = ["shayfreeze <your_email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
crewai = "*"
python-dotenv = "*"
sqlalchemy = "*"
pydantic = "*"

[tool.poetry.dev-dependencies]
tests = ["pytest"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
